--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,6 +64,7 @@ stages:
     - script: |
         python -m pip install --upgrade pip nutter
         # this is because of the old dependency inside Nutter
+        pip install -r unit-requirements.txt
         python -m pip install --upgrade databricks-cli
       displayName: 'Install dependencies'
 
@@ -84,6 +85,13 @@ stages:
         DATABRICKS_HOST: $(DATABRICKS_HOST)
         DATABRICKS_TOKEN: $(DATABRICKS_TOKEN)
       displayName: 'Execute Nutter tests'
+
+    - script: |
+        dbx deploy --jobs=cicd-demo-notebook-test
+      displayName: 'Deploy the job'
+      env:
+        DATABRICKS_HOST: $(PROD_DATABRICKS_HOST)
+        DATABRICKS_TOKEN: $(PROD_DATABRICKS_TOKEN)
 
     - task: PublishTestResults@2
       condition: succeededOrFailed()
