--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,14 +88,14 @@ stages:
       displayName: 'Execute Nutter tests'
 
     - script: |
-        dbx deploy --cluster_id $(CLUSTER_ID) --environment=staging --jobs=cicd-demo-notebook-test --files-only
+        dbx deploy --environment=staging --jobs=cicd-demo-notebook-test --files-only
       displayName: 'Deploy the job'
       env:
         DATABRICKS_HOST: $(DATABRICKS_HOST)
         DATABRICKS_TOKEN: $(DATABRICKS_TOKEN)
 
     - script: |
-        dbx launch --environment=staging --job=cicd-demo-notebook-test --cluster_id $(CLUSTER_ID) --as-run-submit --trace
+        dbx execute --environment=staging --job=cicd-demo-notebook-test --cluster_id $(CLUSTER_ID) --as-run-submit --trace
       displayName: 'Launch integration on test'
       env:
         DATABRICKS_HOST: $(DATABRICKS_HOST)
