--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -95,7 +95,7 @@ stages:
         DATABRICKS_TOKEN: $(DATABRICKS_TOKEN)
 
     - script: |
-        dbx execute --environment=staging --job=cicd-demo-notebook-test --cluster-id $(CLUSTER_ID)
+        dbx execute --environment=staging --job=cicd-demo-notebook-test --cluster-id $(CLUSTER_ID) --no-package --no-rebuild
       displayName: 'Launch job on staging'
       env:
         DATABRICKS_HOST: $(DATABRICKS_HOST)
