--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -110,7 +110,10 @@ stages:
 
 - stage: onRelease
   condition: |
-    eq(variables['Build.SourceBranch'], 'refs/heads/releases')
+    or(
+      startsWith(variables['Build.SourceBranch'], 'refs/heads/releases'),
+      startsWith(variables['Build.SourceBranch'], 'refs/tags/v')
+    )
   jobs:
   - job: onReleaseJob
     pool:
