--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -137,11 +137,13 @@ stages:
           python -m pip install --upgrade pip nutter
           # this is because of the old dependency inside Nutter
           pip install -r unit-requirements.txt
+          pip install -e .
           python -m pip install --upgrade databricks-cli
         displayName: 'Install dependencies'
 
       - script: |
           echo "Checking out the releases branch"
+          echo $(Build.SourceBranchName)
           databricks repos update --path $(PRODUCTION_DIRECTORY) --branch "$(Build.SourceBranchName)"
         env:
           DATABRICKS_HOST: $(DATABRICKS_HOST)
