--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,12 +94,12 @@ stages:
         DATABRICKS_HOST: $(DATABRICKS_HOST)
         DATABRICKS_TOKEN: $(DATABRICKS_TOKEN)
 
-#    - script: |
-#        dbx launch --job=cicd-demo-notebook-test --as-run-submit --trace
-#      displayName: 'Launch job on staging'
-#      env:
-#        DATABRICKS_HOST: $(DATABRICKS_HOST)
-#        DATABRICKS_TOKEN: $(DATABRICKS_TOKEN)
+    - script: |
+        dbx launch --job=cicd-demo-notebook-test --as-run-submit --trace
+      displayName: 'Launch job on staging'
+      env:
+        DATABRICKS_HOST: $(DATABRICKS_HOST)
+        DATABRICKS_TOKEN: $(DATABRICKS_TOKEN)
 
     - task: PublishTestResults@2
       condition: succeededOrFailed()
